fix overflow not showing while creating new notes

--- a/src/scss/layout/_common.scss
+++ b/src/scss/layout/_common.scss
@@ -1029,6 +1029,8 @@
   color: $black;
   height: calc(100vh - 52px);
   width: 100%;
+  overflow-x: visible;
+  overflow-y: auto;
 
   @include media(">=tablet") {
     flex: 1;
